# aip

./: .gitignore  FORD_CONTEXT.md  LAUNCH.md  LICENSE  README.md  SPEC.md  llms.txt  test-live.js
.github/workflows/: test.yml
examples/demo/: demo.js  package-lock.json  package.json
examples/langchain/: README.md  main.py  requirements.txt
examples/multi-agent/: README.md  pipeline.js
examples/openai-agents/: README.md  main.py
registry/: package-lock.json  package.json  server.js
sdk/python/: pyproject.toml
sdk/python/aip/: __init__.py  client.py  envelope.py  manifest.py  registry.py  server.py  trust.py  types.py
sdk/python/tests/: test_envelope.py  test_manifest.py  test_server_client.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  envelope.ts  index.ts  manifest.ts  registry.ts  server.ts  trust.ts  types.ts
sdk/typescript/tests/: envelope.test.ts  manifest.test.ts  registry.test.ts  server-client.test.ts  trust.test.ts
